--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h1 class="text-uppercase">counter</h1>
                 <h1 id="counter" class="counter">0</h1>
                 <div class="btn-container d-flex justify-content-around flex-wrap">
-                    <button class="btn counterBtn prevBtn text-uppercase m-2">lower count</button>
-                    <button class="btn counterBtn nextBtn text-uppercase m-2">add count</button>
+                    <button id="restar" class="btn counterBtn prevBtn text-uppercase m-2">lower count</button>
+                    <button id="sumar" class="btn counterBtn nextBtn text-uppercase m-2">add count</button>
                 </div>
             </div>
         </div>
